[gd_scene load_steps=8 format=4 uid="uid://bokunjru1eeaf"]

[ext_resource type="Script" uid="uid://cxnsojuv2n0ln" path="res://room/new_base.gd" id="1_asjjo"]
[ext_resource type="Texture2D" uid="uid://dnymbt240aqva" path="res://2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="2_asjjo"]
[ext_resource type="PackedScene" uid="uid://bpgta01hhdpro" path="res://room/path.tscn" id="3_asjjo"]
[ext_resource type="Script" uid="uid://bbb1o36gh0fnx" path="res://world/enemy_gen.gd" id="4_13utu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qimmo"]
texture = ExtResource("2_asjjo")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -7, 8, -7, -7, 8, -7, 8, -8, -8, -8)
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7, -8, -7, 8, -8, 8)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -8, 7, 8, 8, 8, 8, -8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, 8, 8, -8, 8, -8, -8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -7.05603, -8, -7.05603, 6.80221, 8, 6.80221, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7, 8, 7, 8, 7.00526, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 7, 8, 7, 8, 7.00526, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(7, -8, 7, 7, -8, 7, -8, 8, 8, 8, 8, -8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, -8, -8, -8, -8, 8, 8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -8, 3, -8, 3, 8, -2, 8, -3, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -8, -2, 8, -8, 8, -8, -8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, -8, 8, -8, 8, 8, 2, 8)
9:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3, -8, 3, -8, 3, 8, -2, 8, -3, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-2, -8, -2, 8, -8, 8, -8, -8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(2, -8, 8, -8, 8, 8, 2, 8)
9:5/0 = 0
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -7, -8, -7)
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_p8jlf"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_qimmo")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asjjo"]
size = Vector2(1104, 480)

[node name="base_room" type="Node2D"]
script = ExtResource("1_asjjo")

[node name="dungeon_room" type="TileMap" parent="."]
scale = Vector2(2.5, 2.5)
tile_set = SubResource("TileSet_p8jlf")
format = 2

[node name="base_wall" type="TileMapLayer" parent="dungeon_room"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAAAIAAcAAAAAAAEAAAAIAAcAAAAAAAIAAAAIAAcAAAAAAAMAAAAIAAcAAAAAAAQAAAAIAAcAAAAAAAUAAAAIAAcAAAAAAAYAAAABAAAAAAAAAAcAAAAAAAYAAAAAAAgAAAABAAYAADAAAAoAAAAIAAcAAAAAAAsAAAAIAAcAAAAAAAwAAAAIAAcAAAAAAA0AAAAIAAcAAAAAAA4AAAAIAAcAAAAAAA8AAAAIAAcAAAABAAAAAAAIAAcAAAABAAEAAAAAAAEAAAABAAIAAAAAAAEAAAABAAMAAAAAAAEAAAABAAQAAAAAAAEAAAABAAUAAAAAAAEAAAABAAYAAAABAAAAAAABAAcAAAAEAAEAAAABAAgAAAAEAAEAAFABAAkAAAADAAUAAAABAAoAAAAAAAEAAAABAAsAAAAAAAEAAAABAAwAAAAAAAEAAAABAA0AAAAAAAEAAAABAA4AAAAAAAQAAAABAA8AAAAIAAcAAAACAAAAAAAIAAcAAAACAAEAAAABAAAAAAACAAIAAAAEAAEAAGACAAMAAAADAAEAAGACAAQAAAACAAEAAGACAAUAAAACAAEAAGACAAYAAAADAAEAAGACAAcAAAACAAEAAGACAAgAAAADAAEAAGACAAkAAAACAAEAAGACAAoAAAADAAEAAGACAAsAAAACAAEAAGACAAwAAAADAAEAAGACAA0AAAAEAAEAADACAA4AAAABAAUAAAACAA8AAAAIAAcAAAADAAAAAAAIAAcAAAADAAEAAAABAAAAAAADAAIAAAADAAEAAAADAAMAAAAGAAAAAAADAAQAAAAIAAIAAAADAAUAAAAGAAAAAAADAAYAAAAHAAAAAAADAAcAAAAJAAIAAAADAAgAAAAJAAEAAAADAAkAAAAJAAEAAAADAAoAAAAGAAIAAAADAAsAAAAGAAAAAAADAAwAAAAIAAEAAAADAA0AAAACAAEAADADAA4AAAABAAUAAAADAA8AAAAIAAcAAAAEAAAAAAAIAAcAAAAEAAEAAAABAAAAAAAEAAIAAAACAAEAAAAEAAMAAAAHAAEAAAAEAAQAAAAGAAIAAAAEAAUAAAAGAAAAAAAEAAYAAAAJAAIAAAAEAAcAAAAIAAEAAAAEAAgAAAAJAAAAAAAEAAkAAAAIAAEAAAAEAAoAAAAJAAIAAAAEAAsAAAAHAAAAAAAEAAwAAAAJAAAAAAAEAA0AAAADAAEAADAEAA4AAAABAAUAAAAEAA8AAAAIAAcAAAAFAAAAAAAIAAcAAAAFAAEAAAABAAAAAAAFAAIAAAADAAEAAAAFAAMAAAAHAAIAAAAFAAQAAAAJAAEAAAAFAAUAAAAIAAEAAAAFAAYAAAAIAAAAAAAFAAcAAAAJAAAAAAAFAAgAAAAGAAAAAAAFAAkAAAAHAAAAAAAFAAoAAAAHAAEAAAAFAAsAAAAJAAAAAAAFAAwAAAAGAAAAAAAFAA0AAAACAAEAADAFAA4AAAABAAUAAAAFAA8AAAAIAAcAAAAGAAAAAAAIAAcAAAAGAAEAAAABAAAAAAAGAAIAAAACAAEAAAAGAAMAAAAJAAIAAAAGAAQAAAAHAAEAAAAGAAUAAAAIAAIAAAAGAAYAAAAIAAEAAAAGAAcAAAAJAAIAAAAGAAgAAAAIAAIAAAAGAAkAAAAIAAIAAAAGAAoAAAAIAAAAAAAGAAsAAAAGAAAAAAAGAAwAAAAHAAEAAAAGAA0AAAADAAEAADAGAA4AAAABAAUAAAAGAA8AAAAIAAcAAAAHAAAAAAAIAAcAAAAHAAEAAAABAAAAAAAHAAIAAAADAAEAAAAHAAMAAAAGAAIAAAAHAAQAAAAJAAAAAAAHAAUAAAAHAAEAAAAHAAYAAAAJAAIAAAAHAAcAAAAIAAEAAAAHAAgAAAAIAAEAAAAHAAkAAAAHAAAAAAAHAAoAAAAGAAEAAAAHAAsAAAAHAAIAAAAHAAwAAAAHAAIAAAAHAA0AAAACAAEAADAHAA4AAAABAAUAAAAHAA8AAAAIAAcAAAAIAAAAAAAIAAcAAAAIAAEAAAABAAAAAAAIAAIAAAACAAEAAAAIAAMAAAAGAAAAAAAIAAQAAAAJAAAAAAAIAAUAAAAJAAAAAAAIAAYAAAAHAAAAAAAIAAcAAAAHAAAAAAAIAAgAAAAIAAAAAAAIAAkAAAAHAAEAAAAIAAoAAAAIAAAAAAAIAAsAAAAGAAAAAAAIAAwAAAAJAAIAAAAIAA0AAAADAAEAADAIAA4AAAABAAUAAAAIAA8AAAAIAAcAAAAJAAAAAAAIAAcAAAAJAAEAAAABAAAAAAAJAAIAAAADAAEAAAAJAAMAAAAJAAAAAAAJAAQAAAAIAAAAAAAJAAUAAAAJAAEAAAAJAAcAAAAJAAEAAAAJAAgAAAAJAAEAAAAJAAkAAAAIAAIAAAAJAAoAAAAHAAAAAAAJAAsAAAAHAAAAAAAJAAwAAAAJAAAAAAAJAA0AAAADAAEAADAJAA4AAAABAAUAAAAJAA8AAAAIAAcAAAAKAAAAAAAIAAcAAAAKAAEAAAABAAAAAAAKAAIAAAACAAEAAAAKAAMAAAAJAAEAAAAKAAQAAAAGAAIAAAAKAAUAAAAHAAEAAAAKAAYAAAAGAAIAAAAKAAcAAAAJAAEAAAAKAAgAAAAIAAIAAAAKAAkAAAAIAAEAAAAKAAoAAAAJAAEAAAAKAAsAAAAIAAIAAAAKAAwAAAAIAAEAAAAKAA0AAAADAAEAADAKAA4AAAABAAUAAAAKAA8AAAAIAAcAAAALAAAAAAAIAAcAAAALAAEAAAABAAAAAAALAAIAAAADAAEAAAALAAMAAAAIAAAAAAALAAQAAAAIAAEAAAALAAUAAAAGAAAAAAALAAYAAAAJAAAAAAALAAcAAAAGAAAAAAALAAgAAAAHAAIAAAALAAkAAAAHAAIAAAALAAoAAAAGAAIAAAALAAsAAAAIAAIAAAALAAwAAAAJAAIAAAALAA0AAAADAAEAADALAA4AAAABAAUAAAALAA8AAAAIAAcAAAAMAAAAAAAIAAcAAAAMAAEAAAABAAAAAAAMAAIAAAACAAEAAAAMAAMAAAAHAAEAAAAMAAQAAAAIAAIAAAAMAAUAAAAGAAAAAAAMAAYAAAAHAAAAAAAMAAcAAAAIAAAAAAAMAAgAAAAHAAEAAAAMAAkAAAAJAAEAAAAMAAsAAAAGAAIAAAAMAAwAAAAJAAEAAAAMAA0AAAADAAEAADAMAA4AAAABAAUAAAAMAA8AAAAIAAcAAAANAAAAAAAIAAcAAAANAAEAAAABAAAAAAANAAIAAAADAAEAAAANAAMAAAAGAAAAAAANAAQAAAAJAAAAAAANAAUAAAAIAAAAAAANAAYAAAAGAAAAAAANAAcAAAAHAAEAAAANAAgAAAAIAAEAAAANAAkAAAAGAAIAAAANAAoAAAAGAAEAAAANAAsAAAAJAAAAAAANAAwAAAAHAAEAAAANAA0AAAADAAEAADANAA4AAAABAAUAAAANAA8AAAAIAAcAAAAOAAAAAAAAAAMAAAAOAAEAAAABAAAAAAAOAAIAAAACAAEAAAAOAAMAAAAHAAAAAAAOAAQAAAAIAAIAAAAOAAUAAAAJAAIAAAAOAAYAAAAHAAEAAAAOAAcAAAAIAAIAAAAOAAgAAAAJAAAAAAAOAAkAAAAJAAAAAAAOAAoAAAAHAAEAAAAOAAsAAAAGAAIAAAAOAAwAAAAJAAAAAAAOAA0AAAACAAEAADAOAA4AAAADAAUAAAAOAA8AAAAAAAMAAAAPAAAAAAADAAYAAGAPAAEAAAAEAAEAADAPAAIAAAADAAEAAAAPAAMAAAAIAAAAAAAPAAQAAAAIAAEAAAAPAAUAAAAJAAIAAAAPAAYAAAAIAAIAAAAPAAcAAAAIAAIAAAAPAAgAAAAJAAEAAAAPAAkAAAAJAAAAAAAPAAoAAAAHAAIAAAAPAAsAAAAJAAIAAAAPAAwAAAAGAAIAAAAPAA0AAAADAAEAADAPAA4AAAAEAAEAAGAPAA8AAAADAAYAAGAQAAAAAAAAAAYAAFAQAAEAAAAEAAEAAFAQAAIAAAACAAEAAAAQAAMAAAAHAAIAAAAQAAQAAAAGAAIAAAAQAAUAAAAGAAIAAAAQAAYAAAAJAAIAAAAQAAcAAAAGAAAAAAAQAAgAAAAJAAEAAAAQAAkAAAAHAAIAAAAQAAoAAAAHAAEAAAAQAAsAAAAGAAEAAAAQAAwAAAAGAAAAAAAQAA0AAAACAAEAADAQAA4AAAAEAAEAAAAQAA8AAAAAAAYAAFARAAAAAAAFAAMAAAARAAEAAAABAAAAAAARAAIAAAADAAEAAAARAAMAAAAGAAEAAAARAAQAAAAHAAIAAAARAAUAAAAIAAAAAAARAAYAAAAIAAIAAAARAAcAAAAJAAIAAAARAAgAAAAIAAEAAAARAAkAAAAJAAAAAAARAAoAAAAGAAAAAAARAAsAAAAJAAIAAAARAAwAAAAIAAIAAAARAA0AAAACAAEAADARAA4AAAAAAAUAAAARAA8AAAAFAAMAAAASAAAAAAAIAAcAAAASAAEAAAABAAAAAAASAAIAAAACAAEAAAASAAMAAAAJAAAAAAASAAQAAAAHAAIAAAASAAUAAAAJAAIAAAASAAYAAAAGAAAAAAASAAcAAAAIAAIAAAASAAgAAAAHAAAAAAASAAkAAAAIAAIAAAASAAoAAAAGAAIAAAASAAsAAAAGAAAAAAASAAwAAAAJAAAAAAASAA0AAAADAAEAADASAA4AAAABAAUAAAASAA8AAAAIAAcAAAATAAAAAAAIAAcAAAATAAEAAAABAAAAAAATAAIAAAADAAEAAAATAAMAAAAIAAAAAAATAAQAAAAJAAAAAAATAAUAAAAHAAEAAAATAAYAAAAGAAAAAAATAAcAAAAIAAEAAAATAAgAAAAHAAEAAAATAAkAAAAHAAAAAAATAAoAAAAGAAAAAAATAAsAAAAIAAAAAAATAAwAAAAIAAIAAAATAA0AAAACAAEAADATAA4AAAABAAUAAAATAA8AAAAIAAcAAAAUAAAAAAAIAAcAAAAUAAEAAAABAAAAAAAUAAIAAAACAAEAAAAUAAMAAAAHAAIAAAAUAAQAAAAGAAIAAAAUAAUAAAAGAAAAAAAUAAYAAAAHAAEAAAAUAAcAAAAHAAIAAAAUAAgAAAAGAAIAAAAUAAkAAAAJAAEAAAAUAAoAAAAJAAEAAAAUAAsAAAAIAAAAAAAUAAwAAAAJAAAAAAAUAA0AAAADAAEAADAUAA4AAAABAAUAAAAUAA8AAAAIAAcAAAAVAAAAAAAIAAcAAAAVAAEAAAABAAAAAAAVAAIAAAADAAEAAAAVAAMAAAAJAAAAAAAVAAQAAAAJAAAAAAAVAAUAAAAHAAAAAAAVAAYAAAAIAAEAAAAVAAcAAAAHAAEAAAAVAAgAAAAGAAEAAAAVAAkAAAAHAAIAAAAVAAsAAAAHAAEAAAAVAAwAAAAHAAEAAAAVAA0AAAACAAEAADAVAA4AAAABAAUAAAAVAA8AAAAIAAcAAAAWAAAAAAAIAAcAAAAWAAEAAAABAAAAAAAWAAIAAAACAAEAAAAWAAMAAAAHAAAAAAAWAAQAAAAGAAAAAAAWAAUAAAAIAAEAAAAWAAYAAAAIAAAAAAAWAAcAAAAJAAEAAAAWAAgAAAAJAAAAAAAWAAkAAAAJAAAAAAAWAAoAAAAHAAAAAAAWAAsAAAAJAAEAAAAWAAwAAAAJAAEAAAAWAA0AAAADAAEAADAWAA4AAAABAAUAAAAWAA8AAAAIAAcAAAAXAAAAAAAIAAcAAAAXAAEAAAABAAAAAAAXAAIAAAADAAEAAAAXAAMAAAAGAAIAAAAXAAQAAAAIAAIAAAAXAAUAAAAGAAAAAAAXAAYAAAAJAAAAAAAXAAcAAAAHAAEAAAAXAAgAAAAGAAEAAAAXAAkAAAAJAAEAAAAXAAoAAAAGAAAAAAAXAAsAAAAGAAIAAAAXAAwAAAAGAAIAAAAXAA0AAAACAAEAADAXAA4AAAABAAUAAAAXAA8AAAAIAAcAAAAYAAAAAAAIAAcAAAAYAAEAAAABAAAAAAAYAAIAAAACAAEAAAAYAAMAAAAHAAAAAAAYAAQAAAAJAAIAAAAYAAUAAAAIAAAAAAAYAAYAAAAJAAIAAAAYAAgAAAAHAAAAAAAYAAkAAAAGAAIAAAAYAAoAAAAJAAEAAAAYAAsAAAAJAAAAAAAYAAwAAAAHAAIAAAAYAA0AAAADAAEAADAYAA4AAAABAAUAAAAYAA8AAAAIAAcAAAAZAAAAAAAIAAcAAAAZAAEAAAABAAAAAAAZAAIAAAADAAEAAAAZAAMAAAAGAAIAAAAZAAQAAAAJAAAAAAAZAAUAAAAIAAEAAAAZAAYAAAAIAAEAAAAZAAcAAAAIAAEAAAAZAAgAAAAJAAEAAAAZAAkAAAAGAAAAAAAZAAoAAAAGAAEAAAAZAAsAAAAIAAAAAAAZAAwAAAAHAAAAAAAZAA0AAAACAAEAADAZAA4AAAABAAUAAAAZAA8AAAAIAAcAAAAaAAAAAAAIAAcAAAAaAAEAAAABAAAAAAAaAAIAAAACAAEAAAAaAAMAAAAHAAIAAAAaAAQAAAAIAAAAAAAaAAUAAAAHAAIAAAAaAAYAAAAIAAIAAAAaAAcAAAAJAAIAAAAaAAgAAAAHAAIAAAAaAAkAAAAGAAIAAAAaAAoAAAAHAAIAAAAaAAsAAAAGAAIAAAAaAAwAAAAJAAIAAAAaAA0AAAADAAEAADAaAA4AAAABAAUAAAAaAA8AAAAIAAcAAAAbAAAAAAAIAAcAAAAbAAEAAAABAAAAAAAbAAIAAAADAAEAAAAbAAMAAAAIAAIAAAAbAAQAAAAHAAAAAAAbAAUAAAAIAAIAAAAbAAYAAAAHAAAAAAAbAAcAAAAGAAAAAAAbAAgAAAAGAAAAAAAbAAkAAAAJAAIAAAAbAAoAAAAGAAIAAAAbAAsAAAAIAAEAAAAbAAwAAAAJAAIAAAAbAA0AAAACAAEAADAbAA4AAAABAAUAAAAbAA8AAAAIAAcAAAAcAAAAAAAIAAcAAAAcAAEAAAABAAAAAAAcAAIAAAACAAEAAAAcAAMAAAAGAAIAAAAcAAQAAAAJAAIAAAAcAAUAAAAGAAAAAAAcAAYAAAAHAAEAAAAcAAcAAAAIAAEAAAAcAAgAAAAJAAEAAAAcAAkAAAAHAAEAAAAcAAoAAAAJAAAAAAAcAAsAAAAIAAIAAAAcAAwAAAAJAAIAAAAcAA0AAAADAAEAADAcAA4AAAABAAUAAAAcAA8AAAAIAAcAAAAdAAAAAAAIAAcAAAAdAAEAAAABAAAAAAAdAAIAAAAEAAEAAAAdAAMAAAADAAEAAFAdAAQAAAACAAEAAFAdAAUAAAADAAEAAFAdAAYAAAACAAEAAFAdAAcAAAADAAEAAFAdAAgAAAACAAEAAFAdAAkAAAACAAEAAFAdAAoAAAADAAEAAFAdAAsAAAADAAEAAFAdAAwAAAACAAEAAFAdAA0AAAAEAAEAAFAdAA4AAAABAAUAAAAdAA8AAAAIAAcAAAAeAAAAAAAIAAcAAAAeAAEAAAAFAAEAAAAeAAIAAAAFAAEAAAAeAAMAAAAFAAEAAAAeAAQAAAAFAAEAAAAeAAUAAAAFAAEAAAAeAAYAAAABAAAAAAAeAAcAAAAEAAEAAGAeAAgAAAAEAAEAADAeAAkAAAAAAAUAAAAeAAoAAAAFAAEAAAAeAAsAAAAFAAEAAAAeAAwAAAAFAAEAAAAeAA0AAAAFAAEAAAAeAA4AAAAFAAQAAAAeAA8AAAAIAAcAAAAfAAAAAAAIAAcAAAAfAAEAAAAIAAcAAAAfAAIAAAAIAAcAAAAfAAMAAAAIAAcAAAAfAAQAAAAIAAcAAAAfAAUAAAAIAAcAAAAfAAYAAAABAAAAAAAfAAcAAAAAAAYAAAAfAAgAAAABAAYAADAfAAkAAAABAAUAAAAfAAoAAAAIAAcAAAAfAAsAAAAIAAcAAAAfAAwAAAAIAAcAAAAfAA0AAAAIAAcAAAAfAA4AAAAIAAcAAAAfAA8AAAAIAAcAAAAMAAoAAAAJAAAAAAAJAAYAAAAIAAAAAAAVAAoAAAAGAAEAAAAYAAcAAAAGAAIAAAAAAAkAAAABAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="base_open" type="TileMapLayer" parent="dungeon_room"]
visible = false
use_parent_material = true
tile_map_data = PackedByteArray("AAAeAAcAAAAIAAQAAGAeAAgAAAAIAAUAAFABAAcAAAAHAAQAAFABAAgAAAAHAAUAAGAPAAEAAAAHAAUAAAAQAAEAAAAIAAUAAAAQAA4AAAAIAAQAAAAPAA4AAAAHAAQAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="base_door" type="TileMapLayer" parent="dungeon_room"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAOAAAAAAAAAAMAAAAOAAEAAAABAAAAAAAPAAAAAAAJAAcAAAAPAAEAAAAGAAMAAAAQAAAAAAAJAAcAAAAQAAEAAAAHAAMAAAARAAAAAAAFAAMAAAARAAEAAAABAAAAAAAOAA4AAAADAAUAAAAOAA8AAAAAAAMAAAAPAA4AAAAGAAMAAAAPAA8AAAAJAAcAAAAQAA4AAAAHAAMAAAAQAA8AAAAJAAcAAAARAA4AAAAAAAUAAAARAA8AAAAFAAMAAAABAAcAAAAIAAQAAAABAAgAAAAIAAUAAAAeAAcAAAAHAAQAAAAeAAgAAAAHAAUAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="top" parent="dungeon_room" instance=ExtResource("3_asjjo")]

[node name="CollisionShape2D" parent="dungeon_room/top" index="0"]
position = Vector2(256, 0)

[node name="top_wall" type="TileMapLayer" parent="dungeon_room/top"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAPAAEAAAABAAAAAAAQAAEAAAABAAAAAAAQAAAAAAAIAAcAAAAPAAAAAAAIAAcAAAAOAAAAAAAIAAcAAAARAAAAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="left" parent="dungeon_room" instance=ExtResource("3_asjjo")]

[node name="CollisionShape2D" parent="dungeon_room/left" index="0"]
position = Vector2(0, 128)

[node name="left_wall" type="TileMapLayer" parent="dungeon_room/left"]
use_parent_material = true
tile_map_data = PackedByteArray("AAABAAcAAAAAAAMAAAABAAgAAAAAAAMAAAABAAYAAAAAAAMAAAABAAkAAAAAAAMAAAAAAAkAAAAIAAcAAAAAAAgAAAAIAAcAAAAAAAcAAAAIAAcAAAAAAAYAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="bottom" parent="dungeon_room" instance=ExtResource("3_asjjo")]

[node name="CollisionShape2D" parent="dungeon_room/bottom" index="0"]
position = Vector2(256, 256)

[node name="bottom_wall" type="TileMapLayer" parent="dungeon_room/bottom"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAPAA4AAAABAAUAAAAOAA4AAAABAAUAAAAQAA4AAAABAAUAAAARAA4AAAABAAUAAAAOAA8AAAAIAAcAAAAPAA8AAAAIAAcAAAAQAA8AAAAIAAcAAAARAA8AAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="right" parent="dungeon_room" instance=ExtResource("3_asjjo")]

[node name="CollisionShape2D" parent="dungeon_room/right" index="0"]
position = Vector2(512, 128)

[node name="right_wall" type="TileMapLayer" parent="dungeon_room/right"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAeAAgAAAAFAAMAAAAeAAcAAAAFAAMAAAAeAAYAAAAFAAMAAAAeAAkAAAAFAAMAAAAfAAkAAAAIAAcAAAAfAAgAAAAIAAcAAAAfAAcAAAAIAAcAAAAfAAYAAAAIAAcAAAA=")
tile_set = SubResource("TileSet_p8jlf")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(640, 320)
shape = SubResource("RectangleShape2D_asjjo")

[node name="enemy_gen" type="Node2D" parent="."]
script = ExtResource("4_13utu")

[connection signal="body_entered" from="Area2D" to="enemy_gen" method="_on_area_2d_body_entered"]
[connection signal="visit" from="enemy_gen" to="." method="_on_enemy_gen_visit"]

[editable path="dungeon_room/top"]
[editable path="dungeon_room/left"]
[editable path="dungeon_room/bottom"]
[editable path="dungeon_room/right"]
